@@ -1,100 +1,90 @@
 package com.dynamiccarsharing.carsharing.service;
 
-import com.dynamiccarsharing.carsharing.enums.PaymentType;
-import com.dynamiccarsharing.carsharing.enums.TransactionStatus;
-import com.dynamiccarsharing.carsharing.filter.Filter;
+import com.dynamiccarsharing.carsharing.dto.TransactionDto;
+import com.dynamiccarsharing.carsharing.mapper.TransactionMapper;
 import com.dynamiccarsharing.carsharing.model.Booking;
 import com.dynamiccarsharing.carsharing.model.Transaction;
-import com.dynamiccarsharing.carsharing.repository.jpa.TransactionJpaRepository;
-import com.dynamiccarsharing.carsharing.dto.TransactionSearchCriteria;
+import com.dynamiccarsharing.carsharing.repository.TransactionRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.math.BigDecimal;
-import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TransactionServiceImplTest {
 
     @Mock
-    private TransactionJpaRepository transactionRepository;
+    private TransactionRepository transactionRepository;
+
+    @Mock
+    private TransactionMapper transactionMapper;
 
     private TransactionServiceImpl transactionService;
 
     @BeforeEach
     void setUp() {
-        transactionService = new TransactionServiceImpl(transactionRepository);
-    }
-
-    private Transaction createTestTransaction(Long id, TransactionStatus status) {
-        return Transaction.builder()
-                .id(id)
-                .booking(Booking.builder().id(1L).build())
-                .amount(new BigDecimal("125.50"))
-                .status(status)
-                .paymentMethod(PaymentType.CREDIT_CARD)
-                .build();
+        transactionService = new TransactionServiceImpl(transactionRepository, transactionMapper);
     }
 
     @Test
-    void findById_whenTransactionExists_shouldReturnOptionalOfTransaction() {
-        Long transactionId = 1L;
-        Transaction testTransaction = createTestTransaction(transactionId, TransactionStatus.COMPLETED);
-        when(transactionRepository.findById(transactionId)).thenReturn(Optional.of(testTransaction));
+    void findTransactionById_whenExists_shouldMapAndReturnDto() {
+        Long id = 1L;
+        Transaction transactionEntity = Transaction.builder().id(id).build();
+        TransactionDto expectedDto = new TransactionDto();
+        expectedDto.setId(id);
 
-        Optional<Transaction> result = transactionService.findById(transactionId);
+        when(transactionRepository.findById(id)).thenReturn(Optional.of(transactionEntity));
+        when(transactionMapper.toDto(transactionEntity)).thenReturn(expectedDto);
+
+        Optional<TransactionDto> result = transactionService.findTransactionById(id);
 
         assertTrue(result.isPresent());
-        assertEquals(transactionId, result.get().getId());
+        assertEquals(id, result.get().getId());
     }
 
     @Test
-    void findById_whenTransactionDoesNotExist_shouldReturnEmptyOptional() {
-        Long transactionId = 1L;
-        when(transactionRepository.findById(transactionId)).thenReturn(Optional.empty());
+    void findTransactionById_whenNotExists_shouldReturnEmptyOptional() {
+        Long id = 1L;
+        when(transactionRepository.findById(id)).thenReturn(Optional.empty());
 
-        Optional<Transaction> result = transactionService.findById(transactionId);
+        Optional<TransactionDto> result = transactionService.findTransactionById(id);
 
         assertFalse(result.isPresent());
     }
 
     @Test
-    void findAll_shouldReturnListOfTransactions() {
-        when(transactionRepository.findAll()).thenReturn(List.of(createTestTransaction(1L, TransactionStatus.PENDING)));
+    void findAllTransactions_shouldMapAndReturnDtoList() {
+        Transaction entity = Transaction.builder().id(1L).build();
+        TransactionDto dto = new TransactionDto();
+        dto.setId(1L);
 
-        List<Transaction> results = transactionService.findAll();
+        when(transactionRepository.findAll()).thenReturn(Collections.singletonList(entity));
+        when(transactionMapper.toDto(entity)).thenReturn(dto);
+
+        List<TransactionDto> results = transactionService.findAllTransactions();
 
         assertEquals(1, results.size());
+        assertEquals(1L, results.get(0).getId());
     }
 
     @Test
-    void findTransactionsByBookingId_shouldCallRepository() {
+    void findTransactionsByBookingId_shouldReturnEntityList() {
         Long bookingId = 1L;
-        when(transactionRepository.findByBookingId(bookingId)).thenReturn(List.of(createTestTransaction(1L, TransactionStatus.PENDING)));
+        Transaction transaction = Transaction.builder()
+                .booking(Booking.builder().id(bookingId).build()).build();
+        when(transactionRepository.findByBookingId(bookingId)).thenReturn(Collections.singletonList(transaction));
 
-        transactionService.findTransactionsByBookingId(bookingId);
+        List<Transaction> results = transactionService.findTransactionsByBookingId(bookingId);
 
-        verify(transactionRepository).findByBookingId(bookingId);
-    }
-
-    @Test
-    void searchTransactions_withCriteria_shouldCallRepositoryWithSpecification() throws SQLException {
-        Long bookingId = 1L;
-        TransactionSearchCriteria criteria = TransactionSearchCriteria.builder().bookingId(bookingId).build();
-        when(transactionRepository.findByFilter(any(Filter.class))).thenReturn(List.of(createTestTransaction(1L, TransactionStatus.PENDING)));
-
-        List<Transaction> results = transactionService.searchTransactions(criteria);
-
-        assertFalse(results.isEmpty());
-        verify(transactionRepository, times(1)).findByFilter(any(Filter.class));
+        assertEquals(1, results.size());
+        assertEquals(bookingId, results.get(0).getBooking().getId());
     }
 }
